--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 
-remappings= ['remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]']
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]   # a list of remappings
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 libraries = []                                                # a list of deployed libraries to link against
 cache = true                                                  # whether to cache builds or not
